--- a/app/page.module.css
+++ b/app/page.module.css
@@ -13,11 +13,11 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 16px;
+  gap: 8px;
   margin: 1em auto 0;
   padding: 0 0.5em;
   position: absolute;
-  bottom: 1.5em;
+  bottom: 0.5em;
   z-index: 1001;
 }
 
@@ -58,6 +58,7 @@
   .listHeader {
     padding: 0 2em;
     bottom: auto;
+    gap: 16px;
     top: 0;
   }
 }
